Devfeat(*) DevFest branding added

--- a/src/assets/l10n/es.json
+++ b/src/assets/l10n/es.json
@@ -7,7 +7,7 @@
     "Código de conducta": "Código de conducta",
     "Postularme como speaker": "Postularme como speaker",
     "¿Quieres ser parte de este evento?":
-        "Would you like to be part of this?",
+        "¿Quieres ser uno de nuestros Speakers?",
     "12 de agosto": "12 de agosto",
     "AGENDA": "AGENDA",
     "Registro de asistentes": "Registro de asistentes",
