feat(*) Speakers and shcedule added

--- a/src/assets/l10n/en.json
+++ b/src/assets/l10n/en.json
@@ -17,11 +17,7 @@
     "Charla de invitado especial #3": "Special guest #3 talk",
     "Charla de invitado especial #4": "Special guest #4 talk",
     "Cierre de evento": "Event closure",
-    "20 de agosto": "August 20th",
-    "21 de agosto": "August 21st",
-    "22 de agosto": "August 22nd",
-    "23 de agosto": "August 23rd",
-    "24 de agosto": "August 24th",
+    "16 de noviembre": "November 16th",
     "Bienvenida": "Opening",
     "lun": "Mon",
     "es": "day",
