Schedule changed and team memebers added

--- a/src/assets/l10n/en.json
+++ b/src/assets/l10n/en.json
@@ -33,7 +33,7 @@
     "ado": "urday",
     "Patrocina": "Sponsored",
     "Comunidades Participantes": "Participating Communities",
-    "Voluntarios": "Team",
+    "Voluntarios": "Team GDG & DevFest",
     "¡No te lo pierdas!": "Don't miss it!",
     "After y 🍻": "After and 🍻"
 }
